--- a/MySQL/NEWS
+++ b/MySQL/NEWS
@@ -1,4 +1,9 @@
 Pending changes in the mainline
 ===============================
 
+
+
+Release 1.0 (2018-07-17)
+========================
+
 * Initial release
